# task-pipeliner

./: .gitignore  CLAUDE.md  PLAN.md  README-ko.md  README.md  TODO.md  WBS.md  cworkspacetask-pipelinerTODO.md  pyproject.toml
docs/: CLAUDE-ko.md  DESIGN_DECISIONS.md  IMPLEMENTATION_PLAN.md  INTERFACE.md  PRD.md  README-ko.md  RETROSPECTIVE.md  TECH_STACK.md  WBS-CLAUDE.md  WBS-pretrain-data-filter.md  WBS-taxonomy-converter-v1.md  WBS-v1.md  WBS-v2.md  WBS-v3.md  WBS-v4.md  WBS.md  pipeline-stall-analysis.md  refactor-remove-io-dependency.md  refactoring-background.md  refactoring-report.md  refactoring-step-metrics.md
output/: kept.jsonl  removed.jsonl
sample/pretrain-data-filter/: CLAUDE.md  pipeline_config.yaml  result.py  run.py  schema.py  steps.py
sample/taxonomy-converter/: CLAUDE.md  loader.py  naver_rules.py  pipeline_config.yaml  run.py  sample_data.jsonl  steps.py  taxonomy.py  text_rules.py  utils.py
src/task_pipeliner/: __init__.py  base.py  checkpoint.py  cli.py  config.py  engine.py  exceptions.py  io.py  pipeline.py  producers.py  progress.py  spill_queue.py  stats.py  step_runners.py
tests/: _run_pipeline.py  dummy_steps.py  test_async_step.py  test_backpressure.py  test_checkpoint.py  test_checkpoint_integration.py  test_cli.py  test_engine.py  test_error.py  test_fanout.py  test_full_disk_queue.py  test_init.py  test_io.py  test_programmable_api.py  test_progress.py  test_queue.py  test_retry.py  test_schema.py  test_shutdown.py  test_smoke.py  test_spill_queue.py  test_state_readiness.py  test_stats.py  test_variables.py
(+38 files in other folders)
